--- a/jquery/index.html
+++ b/jquery/index.html
@@ -1,8 +1,12 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title></title>
 	<script type="text/javascript" src="jquery-2.1.4.js"></script>
+	<script type="text/javascript">
+		console.log('========================================================');
+		console.log(window);
+	</script>
 </head>
 <body>
 
