--- a/Swiper/test.html
+++ b/Swiper/test.html
@@ -38,7 +38,9 @@
 <script type="text/javascript" src='../js/jquip.css.js'></script>
 <script type="text/javascript">
 window.onload = function() {
-    initSwiper();
+    var obj = {"name":"zhou","age":"11"};
+    alert( JSON.stringify(obj));
+    //initSwiper();
 }
 function initSwiper(){
     $('.swiper-container').width(window.screen.width).height(window.screen.height);
