--- a/jquery/index.html
+++ b/jquery/index.html
@@ -2,13 +2,53 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="jquery-2.1.4.js"></script>
+<style type="text/css">
+	.style1{
+		background-color:red;
+		margin:5px;
+	}
+</style>
+<script type="text/javascript" src="jquery-2.1.4.js"></script>
 	<script type="text/javascript">
-		console.log('========================================================');
-		console.log(window);
+
+$(function(){
+	
+	$("a").bind("click",function(){
+		console.log(this);
+		$(document).undelegate(".dynamic");
+	});
+	$(".div1").delegate(".dynamic","click",function(){
+		alert(1111);
+	});
+	var a1 = $("<a>",{
+		text:"动态按钮1",
+		id:"a",
+		class:"dynamic",
+		href:"javascript:void(0)"
+	});
+	var a2 = $("<a>",{
+		text:"动态按钮2",
+		class:"dynamic",
+		href:"javascript:void(0)"
+	});
+	var a3 = $("<a>",{
+		text:"动态按钮3",
+		class:"dynamic",
+		href:"javascript:void(0)"
+	});
+	$(".div1").append(a1);
+	$(".div1").append(a2);
+	$(".div1").append(a3);
+});
 	</script>
 </head>
 <body>
+	<div class="div1">
+		<a href="javascript:void(0)">静态按钮1</a>
+		<a href="javascript:void(0)">静态按钮2</a>
+		<a href="javascript:void(0)">静态按钮3</a>
+	</div>
 
 </body>
+	
 </html>
